# turbodrone

./: .gitignore  README.md  VsReadMe.md  scratch.txt  scratch2.txt
backend/: main.py  pyproject.toml  requirements.txt  video_client.py  web_server.py
backend/dumps_x69/: x69_capture_20260519_231654.h265  x69_capture_20260519_231829.h265
backend/models/: base_rc.py  base_video_model.py  control_profile.py  cooingdv_rc.py  s2x_rc.py  s2x_video_model.py  wifi_uav_rc.py
backend/plugins/: base.py  manager.py  test_yaw_plugin.py
backend/plugins/follow/: follow_controller.py  follow_service.py  kcf_tracker.py  person_detector.py
backend/protocols/: base_video_protocol.py  cooingdv_rc_protocol_adapter.py  cooingdv_video_protocol.py  debug_video_protocol.py  s2x_rc_protocol_adapter.py  s2x_video_protocol.py  wifi_uav_rc_protocol_adapter.py  wifi_uav_video_protocol.py  x69_lg_video_protocol.py
backend/services/: flight_controller.py  video_receiver.py
backend/utils/: dropping_queue.py  wifi_uav_ack_state.py  wifi_uav_packets.py  wifi_uav_variants.py
backend/views/: opencv_video_view.py
docs/: FOLLOW_PLUGIN_FIX.md  S2X_FOLLOW_DIAGNOSTIC_ANALYSIS.md
frontend/: package-lock.json  package.json  pyproject.toml  setup.py
frontend/src/: App.tsx  index.css
frontend/src/components/: AxisIndicator.tsx  CommandButtons.tsx  ControlSchemeToggle.tsx  ControlsOverlay.tsx  DrawingOverlay.tsx  PluginControls.tsx  VideoFeed.tsx
frontend/src/hooks/: useControls.ts  useOverlays.ts  usePlugins.ts  useVideoSizing.ts
frontend/src/lib/: ws.ts
frontend/turbodrone_frontend_server/: main.py
(+40 files in other folders)
